Update Meta Critic Project Notebook.ipynb

--- a/Meta Critic Project Notebook.ipynb
+++ b/Meta Critic Project Notebook.ipynb
@@ -20,8 +20,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4b486d53-83bb-4c01-ba33-fa042157d1b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Halloween is coming!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('/Users/vanes/ThisPC/Documents/GitHub/teds-secrets.json') as f:\n",
+    "    data = json.load(f)\n",
+    "    print(data['message'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8564caff-cb33-4506-b838-5b9fed622182",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9e167a5e-aa4e-4da6-acbe-ef9acfceb181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e7b7628e-d45c-4bf9-8ad4-7d2c94315197",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\vanes\\\\ThisPC\\\\Documents\\\\Github\\\\MetaCriticProject'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3198bc34-02a7-411b-85a6-924d8df2a286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('C:\\\\Users\\\\vanes\\\\ThisPC\\\\Documents\\\\GitHub')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00032e90-e3c8-42e1-aee9-6fbc4427a43d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2d2fd70-f980-45b0-8145-822e77aa53f3",
    "metadata": {},
    "outputs": [],
    "source": []
