Update Meta Critic Project Notebook.ipynb

--- a/Meta Critic Project Notebook.ipynb
+++ b/Meta Critic Project Notebook.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "4b486d53-83bb-4c01-ba33-fa042157d1b5",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Halloween is coming!\n"
+      "Done loading.\n"
      ]
     }
    ],
@@ -37,16 +37,9 @@
     "\n",
     "with open('/Users/vanes/ThisPC/Documents/GitHub/teds-secrets.json') as f:\n",
     "    data = json.load(f)\n",
-    "    print(data['message'])"
+    "    message = data['message']\n",
+    "    print(\"Done loading.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8564caff-cb33-4506-b838-5b9fed622182",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
