Update Meta Critic Project Notebook.ipynb

--- a/Meta Critic Project Notebook.ipynb
+++ b/Meta Critic Project Notebook.ipynb
@@ -84,16 +84,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "00032e90-e3c8-42e1-aee9-6fbc4427a43d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib3\n",
+    "\n",
+    "http = urllib3.PoolManager()\n",
+    "\n",
+    "url = 'http://webcode.me'\n",
+    "\n",
+    "resp = http.request('GET', url)\n",
+    "print(resp.status)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b2d2fd70-f980-45b0-8145-822e77aa53f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<!DOCTYPE html>\n",
+      "<html lang=\"en\">\n",
+      "<head>\n",
+      "    <meta charset=\"UTF-8\">\n",
+      "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
+      "    <title>My html page</title>\n",
+      "</head>\n",
+      "<body>\n",
+      "\n",
+      "    <p>\n",
+      "        Today is a beautiful day. We go swimming and fishing.\n",
+      "    </p>\n",
+      "    \n",
+      "    <p>\n",
+      "         Hello there. How are you?\n",
+      "    </p>\n",
+      "    \n",
+      "</body>\n",
+      "</html>\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(resp.data.decode('utf-8'))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2d2fd70-f980-45b0-8145-822e77aa53f3",
+   "id": "abea0b44-7bec-49f0-ac1a-c4eba04fd302",
    "metadata": {},
    "outputs": [],
    "source": []
