Update Meta Critic Project Notebook.ipynb

--- a/Meta Critic Project Notebook.ipynb
+++ b/Meta Critic Project Notebook.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "00032e90-e3c8-42e1-aee9-6fbc4427a43d",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200\n"
+      "Fetched 348 characters from http://webcode.me (status: 200)\n"
      ]
     }
    ],
@@ -104,46 +104,17 @@
     "url = 'http://webcode.me'\n",
     "\n",
     "resp = http.request('GET', url)\n",
-    "print(resp.status)"
+    "webtext = resp.data.decode('utf-8')\n",
+    "print(f\"Fetched {len(webtext)} characters from {url} (status: {resp.status})\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b2d2fd70-f980-45b0-8145-822e77aa53f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<!DOCTYPE html>\n",
-      "<html lang=\"en\">\n",
-      "<head>\n",
-      "    <meta charset=\"UTF-8\">\n",
-      "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n",
-      "    <title>My html page</title>\n",
-      "</head>\n",
-      "<body>\n",
-      "\n",
-      "    <p>\n",
-      "        Today is a beautiful day. We go swimming and fishing.\n",
-      "    </p>\n",
-      "    \n",
-      "    <p>\n",
-      "         Hello there. How are you?\n",
-      "    </p>\n",
-      "    \n",
-      "</body>\n",
-      "</html>\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(resp.data.decode('utf-8'))"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
