Update Meta Critic Project Notebook.ipynb
Added regular expression searches

--- a/Meta Critic Project Notebook.ipynb
+++ b/Meta Critic Project Notebook.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "00032e90-e3c8-42e1-aee9-6fbc4427a43d",
    "metadata": {},
    "outputs": [
@@ -110,11 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b2d2fd70-f980-45b0-8145-822e77aa53f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 2 matches. The first match is \n",
+      "        Today is a beautiful day. We go swimming and fishing.\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "x = re.findall(\"<p>([\\S\\s.]*?)<\\/p>\", webtext)\n",
+    "print(f\"Found {len(x)} matches. The first match is {x[0]}\")"
+   ]
   },
   {
    "cell_type": "code",
