fixed regular expressions

--- a/MetaCriticProject.ipynb
+++ b/MetaCriticProject.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "306de55a-ba16-4d29-bcbc-af8c3a3dbb00",
    "metadata": {},
    "outputs": [
@@ -31,6 +31,7 @@
     "# contact python\n",
     "http = urllib3.PoolManager()\n",
     "\n",
+    "# grab data for top 2019 movies from metacritic.com\n",
     "url = 'https://www.metacritic.com/browse/movies/score/metascore/year/filtered?year_selected=2019&sort=desc&view=detailed'\n",
     "\n",
     "# request info from meta critic by spoofing as browser\n",
@@ -46,16 +47,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "41e18cfa-b9f7-449b-bd77-5f8f5b3bbba9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_19632/1436976676.py, line 5)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Parasite', 'Portrait of a Lady on Fire', 'The Irishman', 'Marriage Story', 'Apocalypse Now: Final Cut', 'The Souvenir', 'Little Women', 'Uncut Gems', '63 Up', 'For Sama', 'The Farewell', \"Long Day's Journey Into Night\", 'Apollo 11', 'The Body Remembers When the World Broke Open', 'Pain and Glory', 'Genèse (Genesis)', 'Diane', 'An Elephant Sitting Still', 'Rolling Thunder Revue: A Bob Dylan Story by Martin Scorsese', 'One Cut of the Dead', 'Black Mother', 'The Wild Pear Tree', 'American Factory', 'Honeyland', 'Birds of Passage', 'Atlantics', 'Varda by Agnès', 'Ash Is Purest White', 'One Child Nation', 'Booksmart', 'Toy Story 4', 'In My Room', 'Synonyms', 'The Last Black Man in San Francisco', 'The Ground Beneath My Feet', 'Once Upon a Time ... in Hollywood', 'The Cave', 'The Lighthouse', 'Rosie', 'Roll Red Roll', 'Cunningham', 'Toni Morrison: The Pieces I Am', 'Wrestle', 'Relaxer', 'Transit', 'Maiden', 'Carmine Street Guitars', 'Socrates', 'Knives Out', 'Angels Are Made of Light', 'Give Me Liberty', 'Invisible Life', 'I Do Not Care If We Go Down in History as Barbarians', 'Midnight Family', 'In Fabric', 'Us', 'Shadow', 'The Edge of Democracy', 'I Lost My Body', 'Chinese Portrait', '17 Blocks', 'Woman at War', 'Ford v Ferrari', 'The Chambermaid', 'Ray & Liz', 'The Proposal', 'Western Stars', 'Waves', 'Knock Down the House', 'Fiddler: A Miracle of Miracles', 'End of the Century', 'Making Waves: The Art of Cinematic Sound', 'Wild Rose', 'Ad Astra', 'Babylon', 'A Beautiful Day in the Neighborhood', 'Firecrackers', 'David Crosby: Remember My Name', 'Aquarela', 'Light From Light', 'Too Late to Die Young', 'All Is Well', 'Mickey and the Bear', 'Working Woman', 'Funan', 'Gloria Bell', 'Hotel by the River', 'Donbass', 'Midnight Traveler', 'Chained for Life', 'Celebration', 'Hustlers', 'Styx', '3 Faces', 'Holiday', 'Love, Antosha', 'Monos', 'High Flying Bird', 'Diego Maradona', 'Avengers: Endgame']\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\vanes\\AppData\\Local\\Temp/ipykernel_19632/1436976676.py\"\u001b[1;36m, line \u001b[1;32m5\u001b[0m\n\u001b[1;33m    titles = re.findall(\"class=\"title\"><h3>(.*)<\\/h3>\", webtext)\u001b[0m\n\u001b[1;37m                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_19632/1617623277.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtitles\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"Found {len(x)} matches. The first match is {x[0]}\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
      ]
     }
    ],
@@ -64,12 +75,15 @@
     "import re\n",
     "\n",
     "# use regular expressions to search for titles, dates, descriptions, metascores, and thumbnails \n",
-    "titles = re.findall(\"class=\"title\"><h3>(.*)<\\/h3>\", webtext)\n",
-    "dates = re.findall(\"class=\"clamp-details\">\\n\\s+<span>(.*)<\\/\", webtext)\n",
-    "descriptions = re.findall(\"class=\"summary\">\\n\\s+(.*)\", webtext)\n",
-    "metascores = re.findall(\"class=\"metascore_w large movie positive\">(.*)<\", webtext)\n",
-    "thumbnails = re.findall(\"<a href=\"\\/movie\\/(?:.*)\"><img src=\"(.*)\"\", webtext)\n",
-    "\n",
+    "# credit to Alex Song for sharing how they fixed issues with regular expressions being read in python \n",
+    "titles = re.findall(\"class=\\\"title\\\"><h3>(.*)<\\/h3>\", webtext)\n",
+    "dates = re.findall(\"class=\\\"clamp-details\\\">\\n\\s+<span>(.*)<\\/\", webtext)\n",
+    "descriptions = re.findall(\"class=\\\"summary\\\">\\n\\s+(.*)\", webtext)\n",
+    "metascores = re.findall(\"class=\\\"metascore_w large movie positive\\\">(.*)<\", webtext)\n",
+    "# credit to Braydon Gemar for the thumbnail portion of the regular expressions. I had trouble with the one I produced working.\n",
+    "thumbnails = re.findall('<a href=\"\\S+ src=\"(.*)\" alt=\"(?!Metacritic logo\")', webtext)\n",
+    "                        \n",
+    "                        \n",
     "# show retrieved info \n",
     "print(titles)\n",
     "\n",
