added in working code to link sql and work from jupter lab assignment

--- a/Python Web Scraping Assignment.ipynb
+++ b/Python Web Scraping Assignment.ipynb
@@ -2,25 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "96dbafb1-4ea0-4ec9-b283-facfa744e02d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!/usr/bin/env python3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "306de55a-ba16-4d29-bcbc-af8c3a3dbb00",
+   "execution_count": 16,
+   "id": "d00c4a34-a479-408f-bfe3-59e7e8afdc5a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetched 512616 characters from https://www.metacritic.com/browse/movies/score/metascore/year/filtered?year_selected=2019&sort=desc&view=detailed (status: 200)\n"
+      "Fetched 512485 characters from https://www.metacritic.com/browse/movies/score/metascore/year/filtered?year_selected=2019&sort=desc&view=detailed (status: 200)\n"
      ]
     }
    ],
@@ -47,8 +37,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "41e18cfa-b9f7-449b-bd77-5f8f5b3bbba9",
+   "execution_count": 17,
+   "id": "22bfab1d-98c1-4f12-a850-e99ba75b9d7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "c564d5ee-84f8-421c-9f01-5a630d2c5b80",
+   "execution_count": 18,
+   "id": "d7f0ebb3-91e8-41f3-8926-e0447f937e30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "3d03fd5c-2003-48bf-a501-ee6600441773",
+   "execution_count": 19,
+   "id": "4cf3c994-3609-4f58-9485-da7e5030882a",
    "metadata": {},
    "outputs": [
     {
@@ -264,18 +254,18 @@
       "Thumbnail: https://static.metacritic.com/images/products/movies/8/1418dd65038e250bfaaab610e5f984e8-98.jpg\n",
       "\n",
       "\n",
+      "Movie Title: Ash Is Purest White\n",
+      "Release Date: March 15, 2019\n",
+      "Description: Qiao (Zhao Tao) is in love with Bin, a local mobster. During a fight between rival gangs, she fires a gun to protect him. Qiao gets five years in prison for this act of loyalty. Upon her release, she goes looking for Bin to pick up where they left off. \n",
+      "Metascore: 88\n",
+      "Thumbnail: https://static.metacritic.com/images/products/movies/1/e26d1aef863ec2adf681913cc1e8d1ac-98.jpg\n",
+      "\n",
+      "\n",
       "Movie Title: Birds of Passage\n",
       "Release Date: February 13, 2019\n",
       "Description: From the Oscar®-nominated team behind the genre-defying Embrace of the Serpent, comes an equally audacious saga centered on the Wayúu indigenous people during a crucial period in recent Colombian history. Torn between his desire to become a powerful man and his duty to uphold his culture’s values, Rapayet (José Acosta) enters the drug trafficking business in the 1970s and finds quick success despite his tribe’s matriarch Ursula’s (Carmiña Martínez) disapproval. Ignoring ancient omens, Rapayet and his family get caught up in a conflict where honor is the highest currency and debts are paid with blood. A sprawling epic about the erosion of tradition in pursuit of material wealth, Birds of Passage is a visually striking exploration of loyalty, greed, and the voracious nature of change. [The Orchard]\n",
       "Metascore: 88\n",
       "Thumbnail: https://static.metacritic.com/images/products/movies/2/e3ac760bea9ddd27e91bec758effa6e4-98.jpg\n",
-      "\n",
-      "\n",
-      "Movie Title: Atlantics\n",
-      "Release Date: November 15, 2019\n",
-      "Description: In a popular suburb of Dakar, workers on the construction site of a futuristic tower, without pay for months, decide to leave the country by the ocean for a better future. Among them is Suleiman, the lover of Ada, promised to another.\n",
-      "Metascore: 88\n",
-      "Thumbnail: https://static.metacritic.com/images/products/movies/5/a75778ded5ba3a690138359f185bd5fd-98.jpg\n",
       "\n",
       "\n",
       "Movie Title: Varda by Agnès\n",
@@ -285,11 +275,11 @@
       "Thumbnail: https://static.metacritic.com/images/products/movies/1/617b5351ab56367d8843d3ca618091cf-98.jpg\n",
       "\n",
       "\n",
-      "Movie Title: Ash Is Purest White\n",
-      "Release Date: March 15, 2019\n",
-      "Description: Qiao (Zhao Tao) is in love with Bin, a local mobster. During a fight between rival gangs, she fires a gun to protect him. Qiao gets five years in prison for this act of loyalty. Upon her release, she goes looking for Bin to pick up where they left off. \n",
+      "Movie Title: Atlantics\n",
+      "Release Date: November 15, 2019\n",
+      "Description: In a popular suburb of Dakar, workers on the construction site of a futuristic tower, without pay for months, decide to leave the country by the ocean for a better future. Among them is Suleiman, the lover of Ada, promised to another.\n",
       "Metascore: 87\n",
-      "Thumbnail: https://static.metacritic.com/images/products/movies/1/e26d1aef863ec2adf681913cc1e8d1ac-98.jpg\n",
+      "Thumbnail: https://static.metacritic.com/images/products/movies/5/a75778ded5ba3a690138359f185bd5fd-98.jpg\n",
       "\n",
       "\n",
       "Movie Title: One Child Nation\n",
@@ -684,6 +674,13 @@
       "Thumbnail: https://static.metacritic.com/images/products/movies/0/257ef46511e88924815dab9681108cd7-98.jpg\n",
       "\n",
       "\n",
+      "Movie Title: Midnight Traveler\n",
+      "Release Date: September 18, 2019\n",
+      "Description: When the Taliban puts a bounty on Afghan director Hassan Fazili’s head, he is forced to flee the country with his wife and two young daughters. Capturing the family’s uncertain journey firsthand, Fazili documents their harrowing trek across numerous borders revealing the danger and uncertainty facing refugees seeking asylum juxtaposed with the unbreakable love shared amongst the family on the run.\n",
+      "Metascore: 82\n",
+      "Thumbnail: https://static.metacritic.com/images/products/movies/4/37b9db6a16392de820899a5deb55b945-98.jpg\n",
+      "\n",
+      "\n",
       "Movie Title: Funan\n",
       "Release Date: June 7, 2019\n",
       "Description: Cambodia, April 1975. Chou is a young woman whose everyday world is suddenly upended by the arrival of the Khmer Rouge regime. During the chaos of the forced exile from their home, Chou and her husband are separated from their 4-year-old son, who has been sent to an unknown location. As she navigates her new reality, working in the fields day and night under the careful watch of soldiers, and surviving the small indignities and harrowing realities of the increasingly grim work camps, Chou remains steadfast in her determination to reunite her family – even if it means risking everything. \n",
@@ -710,13 +707,6 @@
       "Description: In the Donbass, a region of Eastern Ukraine, a hybrid war takes place, involving an open armed conflict alongside killings and robberies on a mass scale perpetrated by separatist gangs.  In the Donbass, war is called peace, propaganda is uttered as truth and hatred is declared to be love.  A journey through the Donbass unfolds as a chain of curious adventures, where the grotesque and drama are as intertwined as life and death. This is not a tale of one region, one country or one political system. It is about a world, lost in post-truth and fake identities. It is about each and every one of us. [Cannes]\n",
       "Metascore: 82\n",
       "Thumbnail: https://static.metacritic.com/images/products/movies/0/a7fbf547f7282a4b77a62cd1ba990865-98.jpg\n",
-      "\n",
-      "\n",
-      "Movie Title: Midnight Traveler\n",
-      "Release Date: September 18, 2019\n",
-      "Description: When the Taliban puts a bounty on Afghan director Hassan Fazili’s head, he is forced to flee the country with his wife and two young daughters. Capturing the family’s uncertain journey firsthand, Fazili documents their harrowing trek across numerous borders revealing the danger and uncertainty facing refugees seeking asylum juxtaposed with the unbreakable love shared amongst the family on the run.\n",
-      "Metascore: 82\n",
-      "Thumbnail: https://static.metacritic.com/images/products/movies/4/37b9db6a16392de820899a5deb55b945-98.jpg\n",
       "\n",
       "\n",
       "Movie Title: Chained for Life\n",
@@ -782,18 +772,18 @@
       "Thumbnail: https://static.metacritic.com/images/products/movies/5/02f9be4dae29a873139faa3c9ac2261f-98.jpg\n",
       "\n",
       "\n",
+      "Movie Title: A Hidden Life\n",
+      "Release Date: December 13, 2019\n",
+      "Description: Based on real events, A Hidden Life is the story of Franz Jägerstätter, who refused to fight for the Nazis in World War II. When the Austrian peasant farmer is faced with the threat of execution for treason, it is his unwavering faith and his love for his wife, Fani, and children that keeps his spirit alive.\n",
+      "Metascore: 82\n",
+      "Thumbnail: https://static.metacritic.com/images/products/movies/9/05f6ea70e94d0c589b430ce8378aaa9b-98.jpg\n",
+      "\n",
+      "\n",
       "Movie Title: Diego Maradona\n",
       "Release Date: September 20, 2019\n",
       "Description: Constructed from over 500 hours of never-before-seen footage, this documentary centers on the career of celebrated football player Diego Maradona who played for SSC Napoli in the 1980s.\n",
       "Metascore: 82\n",
       "Thumbnail: https://static.metacritic.com/images/products/movies/1/96fbd238f2cc38062dc2e941bf0189e7-98.jpg\n",
-      "\n",
-      "\n",
-      "Movie Title: Avengers: Endgame\n",
-      "Release Date: April 26, 2019\n",
-      "Description: The grave course of events set in motion by Thanos that wiped out half the universe and fractured the Avengers ranks compels the remaining Avengers to take one final stand in Marvel Studios’ grand conclusion to twenty-two films.\n",
-      "Metascore: 82\n",
-      "Thumbnail: https://static.metacritic.com/images/products/movies/4/236313f7aaa7728b28a369b44ebe98b9-98.jpg\n",
       "\n",
       "\n"
      ]
@@ -811,8 +801,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "id": "65f645fc-b450-4123-b36a-f2a08a98ebb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('/Users/vanes/ThisPC/Documents/GitHub/credentials.json') as f:\n",
+    "    data = json.load(f)\n",
+    "    username = data['username'] \n",
+    "    password = data['password'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ebf5414a-5477-42e0-8d79-2ab83818549d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyodbc\n",
+    "\n",
+    "conn2 = pyodbc.connect(\"Driver={SQL Server};\"\n",
+    "                       \"Server=FALCON-HQ\\SQLEXPRESS;\"\n",
+    "                       \"Database=DA320;\"\n",
+    "                       \"Trusted_Connection=yes;\"\n",
+    "                       \"UID\" + username + \";\"\n",
+    "                       \"PWD\" + password)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8d0b8759-10cf-4948-ae73-6efde92521c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor = conn2.cursor()\n",
+    "SQL = \"INSERT INTO Reviews (MovieTitle, ReleaseDate, Description, Metascore) values (?,?,?,?)\"\n",
+    "Arguments = \"Movie Title\", \"Release Date\", \"Description\", \"Metascore\" \n",
+    "i = 0\n",
+    "while i < len(titles) and i < len(dates) and i < len(descriptions) and i*2 < len(metascores):\n",
+    "              Arguments = titles[i], dates[i], descriptions[i], metascores[i*2]\n",
+    "              cursor.execute(SQL, Arguments)\n",
+    "              cursor.commit()\n",
+    "              i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "25b2e18a-7616-480b-b0c5-dfc410f0fd63",
+   "id": "071a6a13-71e7-4666-b2c4-209dbdb93dd0",
    "metadata": {},
    "outputs": [],
    "source": []
