added new histogram with commenting

--- a/Python Web Scraping Assignment.ipynb
+++ b/Python Web Scraping Assignment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "d00c4a34-a479-408f-bfe3-59e7e8afdc5a",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "22bfab1d-98c1-4f12-a850-e99ba75b9d7a",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "d7f0ebb3-91e8-41f3-8926-e0447f937e30",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "id": "4cf3c994-3609-4f58-9485-da7e5030882a",
    "metadata": {},
    "outputs": [
@@ -801,11 +801,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "id": "65f645fc-b450-4123-b36a-f2a08a98ebb1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# grab credentials for SQL login from a json file to not leak data\n",
     "import json\n",
     "\n",
     "with open('/Users/vanes/ThisPC/Documents/GitHub/credentials.json') as f:\n",
@@ -816,11 +817,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "ebf5414a-5477-42e0-8d79-2ab83818549d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# connect jupyter notebook to SQL server\n",
     "import pyodbc\n",
     "\n",
     "conn2 = pyodbc.connect(\"Driver={SQL Server};\"\n",
@@ -833,11 +835,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "id": "8d0b8759-10cf-4948-ae73-6efde92521c1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# insert scraped data into SQL database\n",
     "cursor = conn2.cursor()\n",
     "SQL = \"INSERT INTO Reviews (MovieTitle, ReleaseDate, Description, Metascore) values (?,?,?,?)\"\n",
     "Arguments = \"Movie Title\", \"Release Date\", \"Description\", \"Metascore\" \n",
